--- a/public/styles.css
+++ b/public/styles.css
@@ -65,3 +65,50 @@ select {
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important; } }
+
+body {
+  background-color: #222;
+  color: #fff;
+  min-height: 100vh; }
+
+nav div .cust-pad {
+  padding: 0rem 0rem; }
+
+main {
+  padding: 1rem; }
+
+.body-head {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  padding: 2rem; }
+  .body-head > * {
+    display: grid;
+    justify-content: center; }
+
+.input-field {
+  min-height: 10vh;
+  display: grid; }
+  .input-field > div {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem; }
+    .input-field > div > input {
+      margin: 0 !important; }
+
+#in1 {
+  background-color: honeydew;
+  height: 2.5rem;
+  font-size: 1rem;
+  padding-left: .5rem;
+  border-radius: 5rem 0rem 0rem 5rem; }
+
+#in2 {
+  border-radius: 0rem 5rem 5rem 0rem; }
+
+@media only screen and (min-width: 34rem) {
+  .input-field {
+    justify-content: center; } }
