--- a/public/styles.css
+++ b/public/styles.css
@@ -94,7 +94,7 @@ main {
     justify-content: center;
     align-content: center;
     align-items: center;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     column-gap: 1rem; }
     .input-field > div > input {
       margin: 0 !important; }
@@ -111,4 +111,6 @@ main {
 
 @media only screen and (min-width: 34rem) {
   .input-field {
-    justify-content: center; } }
+    justify-content: center; }
+  nav div .cust-pad {
+    padding: 0rem 1rem; } }
