--- a/src/_small.scss
+++ b/src/_small.scss
@@ -4,6 +4,12 @@ body{
     min-height: 100vh;
 }
 
+main{
+    display: grid;
+    justify-content: center;
+    justify-self: center;
+}
+
 nav{
     div{
         .cust-pad{
@@ -53,4 +59,34 @@ main{
 
 #in2{
     border-radius: 0rem 5rem 5rem 0rem;
+}
+
+#outDest{
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    grid-template-columns: 1fr;
+}
+
+.secHeader{
+    display: grid;
+    grid-column: 1 / span 1;
+}
+
+.displayCard{
+    width: 95%;
+    max-width: 80vw;
+    display: grid;
+    border-radius: .5rem;
+    justify-content: center;
+    background-color: #ddd;
+    color: #222;
+    margin: 1rem;
+    padding: 1rem;
+    &:hover{
+        background-color: #ccc;
+    }
+    &:active{
+        background-color: #aaa;
+    }
 }
