--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,11 @@ body {
   color: #fff;
   min-height: 100vh; }
 
+main {
+  display: grid;
+  justify-content: center;
+  justify-self: center; }
+
 nav div .cust-pad {
   padding: 0rem 0rem; }
 
@@ -109,8 +114,43 @@ main {
 #in2 {
   border-radius: 0rem 5rem 5rem 0rem; }
 
+#outDest {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  grid-template-columns: 1fr; }
+
+.secHeader {
+  display: grid;
+  grid-column: 1 / span 1; }
+
+.displayCard {
+  width: 90%;
+  max-width: 80vw;
+  display: grid;
+  border-radius: .5rem;
+  justify-content: center;
+  background-color: #ddd;
+  color: #222;
+  margin: 1rem;
+  padding: 1rem; }
+  .displayCard:hover {
+    background-color: #ccc; }
+  .displayCard:active {
+    background-color: #aaa; }
+
 @media only screen and (min-width: 34rem) {
   .input-field {
     justify-content: center; }
   nav div .cust-pad {
-    padding: 0rem 1rem; } }
+    padding: 0rem 1rem; }
+  #outDest {
+    grid-template-columns: 1fr 1fr; }
+  .secHeader {
+    grid-column: 1 / span 2; } }
+
+@media only screen and (min-width: 60rem) {
+  #outDest {
+    grid-template-columns: 1fr 1fr 1fr 1fr; }
+  .secHeader {
+    grid-column: 1 / span 4; } }
